--- a/public/bower.json
+++ b/public/bower.json
@@ -18,6 +18,7 @@
     "paper-icon-button": "polymerelements/paper-icon-button#^1.0.0",
     "web-animations-js": "web-animations/web-animations-js#^2.2.1",
     "iron-input": "polymerelements/iron-input#^1.0.0",
-    "iron-autogrow-textarea": "polymerelements/iron-autogrow-textarea#^1.0.0"
+    "iron-autogrow-textarea": "polymerelements/iron-autogrow-textarea#^1.0.0",
+    "polymerfire": "firebase/polymerfire#^0.10.3"
   }
 }
