--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,4 +1,4 @@
-{ "name": "Notes",
+{ "name": "Next 2017",
   "scope": "./",
   "start_url": "index.html",
   "display": "standalone",
@@ -6,32 +6,32 @@
   "theme_color": "#2196F3",
   "background_color": "#2196F3",
   "icons": [{
-    "src": "bower_components/note-app/common/images/icon-0-75x.png",
+    "src": "bower_components/note-app-elements/images/next36X36.png",
     "sizes": "36x36",
     "type": "image/png"
   },
   {
-    "src": "bower_components/note-app/common/images/icon-1x.png",
+    "src": "bower_components/note-app-elements/images/next48X48.png",
     "sizes": "48x48",
     "type": "image/png"
   },
   {
-    "src": "bower_components/note-app/common/images/icon-1-5x.png",
+    "src": "bower_components/note-app-elements/images/next72X72.png",
     "sizes": "72x72",
     "type": "image/png"
   },
   {
-    "src": "bower_components/note-app/common/images/icon-2x.png",
+    "src": "bower_components/note-app-elements/images/next96X96.png",
     "sizes": "96x96",
     "type": "image/png"
   },
   {
-    "src": "bower_components/note-app/common/images/icon-3x.png",
+    "src": "bower_components/note-app-elements/images/next144X144.png",
     "sizes": "144x144",
     "type": "image/png"
   },
   {
-    "src": "bower_components/note-app/common/images/icon-4x.png",
+    "src": "bower_components/note-app-elements/images/next192X192.png",
     "sizes": "192x192",
     "type": "image/png"
   }]
